aulway: add pages
