# docs/swagger.yaml
@@ -8,6 +8,18 @@ definitions:
       total_seats:
         type: integer
     type: object
+  domain.Page:
+    properties:
+      Content:
+        type: string
+      ID:
+        type: integer
+      Title:
+        description: '"about_us", "privacy_policy", "support"'
+        type: string
+      UpdatedAt:
+        type: string
+    type: object
   domain.Route:
     properties:
       available_seats:
@@ -145,6 +157,11 @@ definitions:
         type: string
       user:
         $ref: '#/definitions/model.UserResponse'
+    type: object
+  model.UpdatePageRequest:
+    properties:
+      content:
+        type: string
     type: object
   model.UpdateRouteRequest:
     properties:
@@ -344,6 +361,79 @@ paths:
       summary: Get Bus
       tags:
       - bus
+  /api/pages/{title}:
+    get:
+      consumes:
+      - application/json
+      description: 'Retrieves a page''s content by title. Available titles: "about_us",
+        "privacy_policy", "help_support".'
+      parameters:
+      - description: Page Title
+        in: path
+        name: title
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/domain.Page'
+        "404":
+          description: Page not found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get a page
+      tags:
+      - pages
+    put:
+      consumes:
+      - application/json
+      description: 'Updates the content of a page by title. Only admins can update.Available
+        titles: "about_us", "privacy_policy", "help_support".'
+      parameters:
+      - description: Page Title
+        in: path
+        name: title
+        required: true
+        type: string
+      - description: Page content
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdatePageRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Page updated successfully
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Invalid request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Failed to update page
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Update a page
+      tags:
+      - pages
   /api/routes:
     get:
       consumes:
@@ -576,7 +666,48 @@ paths:
       - BearerAuth: []
       summary: Buy tickets
       tags:
-      - Tickets
+      - tickets
+  /api/tickets/users/{userId}:
+    get:
+      consumes:
+      - application/json
+      description: Fetches a user's past or upcoming tickets based on the type parameter.
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: string
+      - description: Type of tickets
+        enum:
+        - upcoming
+        - past
+        in: query
+        name: type
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Ticket'
+            type: array
+        "400":
+          description: Invalid type
+          schema:
+            $ref: '#/definitions/errs.Err'
+        "500":
+          description: Failed to fetch tickets
+          schema:
+            $ref: '#/definitions/errs.Err'
+      security:
+      - BearerAuth: []
+      summary: Get user tickets
+      tags:
+      - tickets
   /api/users:
     get:
       consumes:
@@ -615,6 +746,45 @@ paths:
       tags:
       - users
   /api/users/{userId}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes a user by their ID. Only admin or the user themselves can
+        delete.
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User successfully deleted
+          schema:
+            type: string
+        "400":
+          description: Invalid user ID
+          schema:
+            $ref: '#/definitions/errs.Err'
+        "403":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/errs.Err'
+        "404":
+          description: User not found
+          schema:
+            $ref: '#/definitions/errs.Err'
+        "500":
+          description: Failed to delete user
+          schema:
+            $ref: '#/definitions/errs.Err'
+      security:
+      - BearerAuth: []
+      summary: Delete a user
+      tags:
+      - users
     get:
       consumes:
       - application/json
